tests/paczka1/fuzzy1/11790036.err
Error in line 5: S179 A6 19,5
Error in line 20: vxuwy9O31 A362 86,6
Error in line 21: S179 A362 117,2
Error in line 31: sfepnGuRXoa A6 92,1
Error in line 34: vZF3bcM A6 7,9
